[gd_scene load_steps=2 format=3 uid="uid://cbvmcxfho12u2"]

[ext_resource type="Script" path="res://prog_152a.gd" id="1_8nqyw"]

[node name="prog_152a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8nqyw")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = 20.0
offset_right = 568.0
offset_bottom = 152.0

[node name="calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 56.0
offset_right = 194.0
offset_bottom = 94.0
text = "calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 104.0
offset_right = 196.0
offset_bottom = 142.0
text = "clear"

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 165.0
offset_right = 197.0
offset_bottom = 203.0
text = "exit"

[connection signal="pressed" from="calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
